<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:name=".ForgotPasswordActivity"
    android:gravity="center"
    android:background="@drawable/background_booking_car">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/qu_n_m_t_kh_u"
        android:textColor="#08F8F1"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#A4FBF9FC"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#4E342E"
        android:textIsSelectable="false"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="24dp"
        android:backgroundTint="#A14CAFA7"
        android:text="@string/kh_i_ph_c_m_t_kh_u"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnResetPassword"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/quay_l_i_ng_nh_p"
        android:textColor="#03FFE7" />

</RelativeLayout>
